--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,57 +37,57 @@ build_preview:
     MESSAGE: ":gift_heart: Your preview site is available!\nNow running tests..."
     UNTRACKED_EXTRAS: "data,content/integrations"
   script:
-    - post_dd_event "documentation deploy ${CI_COMMIT_REF_NAME} started" "${CI_PROJECT_URL}/pipelines/${CI_PIPELINE_ID}" "info"
+#    - post_dd_event "documentation deploy ${CI_COMMIT_REF_NAME} started" "${CI_PROJECT_URL}/pipelines/${CI_PIPELINE_ID}" "info"
     - version_static_assets
-    - sync_integration_descriptions
-    - placehold_translations
-    - build_hugo_site
-    - build_hugo_site_ja
-    - minify_html
+#    - sync_integration_descriptions
+#    - placehold_translations
+#    - build_hugo_site
+#    - build_hugo_site_ja
+#    - minify_html
     - collect_static_assets
-    - push_site_to_s3
-    - notify_slack "<https://github.com/DataDog/documentation/commit/${CI_COMMIT_SHA}|${CI_COMMIT_REF_NAME}> is ready for preview. <${CI_PROJECT_URL}/pipelines/${CI_PIPELINE_ID}| checks running>." "#31b834"
-    - remove_static_from_repo
-    - create_artifact
-    - create_artifact_untracked
+#    - push_site_to_s3
+#    - notify_slack "<https://github.com/DataDog/documentation/commit/${CI_COMMIT_SHA}|${CI_COMMIT_REF_NAME}> is ready for preview. <${CI_PROJECT_URL}/pipelines/${CI_PIPELINE_ID}| checks running>." "#31b834"
+#    - remove_static_from_repo
+#    - create_artifact
+#    - create_artifact_untracked
   only:
     - /.+?\/[a-zA-Z0-9_-]+/
 
-test_preview_images:
-  <<: *base_template
-  stage: post-deploy
-  environment: "preview"
-  variables:
-    URL: ${PREVIEW_DOMAIN}
-  script:
-    - pull_artifact_from_s3
-    - test_site_links "images" "${URL}" "True" "False" "True"
-  only:
-    - /.+?\/[a-zA-Z0-9_-]+/
-
-test_preview_static:
-  <<: *base_template
-  stage: post-deploy
-  environment: "preview"
-  variables:
-    URL: ${PREVIEW_DOMAIN}
-  script:
-    - pull_artifact_from_s3
-    - test_site_links "static" "${URL}" "True" "False" "True"
-  only:
-    - /.+?\/[a-zA-Z0-9_-]+/
-
-test_preview_links:
-  <<: *base_template
-  stage: post-deploy
-  environment: "preview"
-  variables:
-    URL: ${PREVIEW_DOMAIN}
-  script:
-    - pull_artifact_from_s3
-    - test_site_links "links" "${URL}" "True" "False" "True"
-  only:
-    - /.+?\/[a-zA-Z0-9_-]+/
+#test_preview_images:
+#  <<: *base_template
+#  stage: post-deploy
+#  environment: "preview"
+#  variables:
+#    URL: ${PREVIEW_DOMAIN}
+#  script:
+#    - pull_artifact_from_s3
+#    - test_site_links "images" "${URL}" "True" "False" "True"
+#  only:
+#    - /.+?\/[a-zA-Z0-9_-]+/
+#
+#test_preview_static:
+#  <<: *base_template
+#  stage: post-deploy
+#  environment: "preview"
+#  variables:
+#    URL: ${PREVIEW_DOMAIN}
+#  script:
+#    - pull_artifact_from_s3
+#    - test_site_links "static" "${URL}" "True" "False" "True"
+#  only:
+#    - /.+?\/[a-zA-Z0-9_-]+/
+#
+#test_preview_links:
+#  <<: *base_template
+#  stage: post-deploy
+#  environment: "preview"
+#  variables:
+#    URL: ${PREVIEW_DOMAIN}
+#  script:
+#    - pull_artifact_from_s3
+#    - test_site_links "links" "${URL}" "True" "False" "True"
+#  only:
+#    - /.+?\/[a-zA-Z0-9_-]+/
 
 # ================== live ================== #
 build_live:
