--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,8 +39,8 @@ build_preview:
   script:
 #    - post_dd_event "documentation deploy ${CI_COMMIT_REF_NAME} started" "${CI_PROJECT_URL}/pipelines/${CI_PIPELINE_ID}" "info"
     - version_static_assets
-#    - sync_integration_descriptions
-#    - placehold_translations
+    - sync_integration_descriptions
+    - placehold_translations
     - build_hugo_site
 #    - build_hugo_site_ja
 #    - minify_html
